[package]

exclude = [ ".gitignore", ".travis.yml" ]
authors = [ "Tom Bebbington <tophattedcoder@gmail.com>" ]
description = "A wrapper for LLVM, a powerful library and toolkit for compilers"
documentation = "https://tombebbington.github.io/llvm-rs/llvm/index.html"
keywords = [ "compile", "compiler", "jit", "interpreter" ]
license = "BSD-3-Clause"
name = "llvm-alt"
readme = "README.md"
repository = "https://github.com/TomBebbington/llvm-rs"
version = "0.5.0"
build = "build.rs"

[lib]

name = "llvm"

[profile.release]
lto = true

[dependencies]
cbox = "0.*"
libc = "0.*"

[dependencies.llvm-sys]
version = "*"
git = "https://github.com/TomBebbington/llvm-sys.rs"
